// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders html-like file simillar to jsx 1`] = `
"
[33m<[39m[33mdiv[39m [33mclass[39m[33m=[39m[32m"test"[39m[33m>[39mtest[33m<[39m[33m/[39m[33mdiv[39m[33m>[39m
[33m<[39mscript setup lang[33m=[39m[32m"ts"[39m[33m>[39m
console[33m.[39m[34mlog[39m([32m"test"[39m)
[33m<[39m[36m/script>[39m
  "
`;

exports[`renders html-like file without jsx setting 1`] = `
"
[33m<[39mdiv [35mclass[39m[33m=[39m[32m"test"[39m[33m>[39mtest[33m<[39m[36m/div>[39m
[33m<[39mscript setup lang[33m=[39m[32m"ts"[39m[33m>[39m
console[33m.[39m[34mlog[39m([32m"test"[39m)
[33m<[39m[36m/script>[39m
  "
`;

exports[`should highlight code 1`] = `
"
[35mimport[39m [32m'module'[39m
[35mimport[39m { test } [35mfrom[39m [32m'module'[39m
[35mimport[39m [33m*[39m [35mas[39m module [35mfrom[39m [32m'module'[39m
[35mimport[39m module [35mfrom[39m [32m'module'[39m
[35mfunction[39m [34mtest[39m() {}
[35mconst[39m test [33m=[39m () [33m=>[39m {}
[35mclass[39m [33mTest[39m {}
[35mexport[39m [35mdefault[39m test
[35mexport[39m [35mconst[39m test [33m=[39m [32m'test'[39m
[35mexport[39m [35mfunction[39m [34mtest[39m() {}
[35mexport[39m [35mclass[39m [33mTest[39m {}
[35mexport[39m [33m*[39m [35mas[39m test [35mfrom[39m [32m'module'[39m
[35mexport[39m [33m*[39m [35mfrom[39m [32m'module'[39m
[35mexport[39m { test } [35mfrom[39m [32m'module'[39m
[35mexport[39m { test [35mas[39m test2 } [35mfrom[39m [32m'module'[39m
[35mconst[39m string [33m=[39m [32m"test"[39m
[35mconst[39m string [33m=[39m [32m\`test\`[39m
[35mconst[39m string [33m=[39m [32m\`dsdsdt[39m[36m\${[39mtest[36m}[39m[32mst\`[39m
[35mconst[39m string [33m=[39m [32m\`d[39m[36m\${[39m[33mSOE[39m[36m}[39m[32mdsdt[39m[36m\${[39mtest[36m}[39m[32mst\`[39m
[35mconst[39m regexp [33m=[39m [36m/test/[39m
[35mconst[39m test [33m=[39m (() [33m=>[39m {})()
[34mtest[39m[33m?.[39m()
[34mtest[39m[33m![39m()
[34mtest[39m ()
[34mtest[39m
()
{
  console[33m.[39m[34mlog[39m([32m'test'[39m)
}
[90m/**
 * test
 */[39m
[90m/** test */[39m
[90m// test[39m
  "
`;

exports[`should highlight jsx code 1`] = `
"
[35mfunction[39m [33mTest[39m() {
  [35mreturn[39m [33m<[39m[33mdiv[39m[33m>[39mtest[33m<[39m[33m/[39m[33mdiv[39m[33m>[39m
}

[35mfunction[39m [33mTest[39m() {
  [35mreturn[39m [33m<[39m[33mdiv[39m[33m>[39m[33m{[39m[32m'test'[39m[33m}[39m[33m<[39m[33m/[39m[33mdiv[39m[33m>[39m
}

[35mfunction[39m [33mTest[39m() {
  [35mreturn[39m (
    [33m<[39m[33m>[39m
      [33m<[39m[33mdiv[39m[33m>[39mtest[33m<[39m[33m/[39m[33mdiv[39m[33m>[39m
      [33m<[39m[33mdiv[39m[33m>[39mtest[33m<[39m[33m/[39m[33mdiv[39m[33m>[39m
    [33m<[39m[33m/[39m[33m>[39m
  )
}

[35mfunction[39m [33mInvalid[39m() {
  [35mreturn[39m [33m<[39m[33m/[39m[33mdiv[39m[33m>[39m{test}[33m<[39m[33mdiv[39m[33m>[39m
[37m[41m[1m}[22m[49m[39m
  "
`;
